jeprofl/src/report/snapshots/jeprofl__report__pretty__tests__histogram_duration_humanized.snap
---
source: jeprofl/src/report/pretty.rs
assertion_line: 347
expression: buf
---
≤UpperBound (ns)         | Human              |     Count | Percentage | ##################################################
------------------------+--------------------+-----------+-----------+--------------------------------------------------
<=1                      | 0.000000001s       |         1 |    33.33% | ##################################################
<=4095                   | 0.000004095s       |         1 |    33.33% | ##################################################
<=1073741823             | 1.073741823s       |         1 |    33.33% | ##################################################
Total time (ns): 1073745275 (1.073745275s) across 3 events
