jeprofl/src/report/snapshots/jeprofl__report__pretty__tests__histogram_empty.snap
---
source: jeprofl/src/report/pretty.rs
expression: buf
---
≤UpperBound | Count     | Percentage | ##################################################
----------+-----------+------------+--------------------------------------------------
Total value: 0 across 0 events
