jeprofl/src/report/snapshots/jeprofl__report__pretty__tests__histogram_large_values.snap
---
source: jeprofl/src/report/pretty.rs
expression: buf
---
≤UpperBound | Count     | Percentage | ##################################################
----------+-----------+------------+--------------------------------------------------
<=2097151  |         1 |     50.00% | ##################################################
<=2147483647 |         1 |     50.00% | ##################################################
Total value: 1074790400 across 2 events
