jeprofl/src/report/snapshots/jeprofl__report__pretty__tests__histogram_many_small_values.snap
---
source: jeprofl/src/report/pretty.rs
expression: buf
---
≤UpperBound | Count     | Percentage | ##################################################
----------+-----------+------------+--------------------------------------------------
<=1        |      1000 |     99.90% | ##################################################
<=1023     |         1 |      0.10% | 
Total value: 2023 across 1001 events
