jeprofl/src/report/snapshots/jeprofl__report__pretty__tests__histogram_multiple_sizes.snap
---
source: jeprofl/src/report/pretty.rs
assertion_line: 299
expression: buf
---
≤UpperBound |     Count | Percentage | ##################################################
----------+-----------+-----------+--------------------------------------------------
<=1        |         1 |    33.33% | ##################################################
<=1023     |         1 |    33.33% | ##################################################
<=2047     |         1 |    33.33% | ##################################################
Total count: 1539 across 3 events
