jeprofl/src/report/snapshots/jeprofl__report__pretty__tests__histogram_single_value.snap
---
source: jeprofl/src/report/pretty.rs
assertion_line: 283
expression: buf
---
≤UpperBound |     Count | Percentage | ##################################################
----------+-----------+-----------+--------------------------------------------------
<=1023     |         1 |   100.00% | ##################################################
Total count: 1023 across 1 events
